# CMakeBuild

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md
.github/workflows/: c-cpp.yaml
CMakeBuild/: CMakeLists.txt
CMakeBuild_Test/: CMakeLists.txt  README.md  TestAssertMacros.cmake
CMakeBuild_Test/TestBuildBPHash/: CMakeLists.txt
CMakeBuild_Test/TestBuildBPHash/TestBuildBPHash/: CMakeLists.txt
CMakeBuild_Test/TestBuildCBLAS/: CMakeLists.txt
CMakeBuild_Test/TestBuildCereal/: CMakeLists.txt
CMakeBuild_Test/TestBuildCereal/TestBuildCereal/: CMakeLists.txt
CMakeBuild_Test/TestBuildEigen3/: CMakeLists.txt
CMakeBuild_Test/TestBuildEigen3/TestBuildEigen3/: CMakeLists.txt
CMakeBuild_Test/TestBuildGA/: CMakeLists.txt
CMakeBuild_Test/TestBuildGA/TestBuildGA/: CMakeLists.txt
CMakeBuild_Test/TestBuildLibInt/: CMakeLists.txt
CMakeBuild_Test/TestBuildLibInt/TestBuildLibInt/: CMakeLists.txt
CMakeBuild_Test/TestBuildPybind11/: CMakeLists.txt
CMakeBuild_Test/TestBuildPybind11/TestBuildPybind11/: CMakeLists.txt
CMakeBuild_Test/TestDebugBuildType/: CMakeLists.txt
CMakeBuild_Test/TestDebugBuildType/TestDebugBuildType/: CMakeLists.txt
CMakeBuild_Test/TestReleaseBuildType/: CMakeLists.txt
CMakeBuild_Test/TestReleaseBuildType/TestReleaseBuildType/: CMakeLists.txt
CMakeBuild_Test/TestSharedLibrary/: CMakeLists.txt
CMakeBuild_Test/TestSharedLibrary/TestSharedLibrary/: CMakeLists.txt
NWChemExBase/: CMakeLists.txt
NWChemExBase_Test/: CMakeLists.txt  README.md  RunNWChemExBaseTest.sh  TestUtilityMacros.cmake
NWChemExBase_Test/TestBuildCBLAS/: CMakeLists.txt
NWChemExBase_Test/TestBuildCatch/: CMakeLists.txt
NWChemExBase_Test/TestBuildEigen3/: CMakeLists.txt
NWChemExBase_Test/TestBuildLAPACKE/: CMakeLists.txt
NWChemExBase_Test/TestBuildLibInt/: CMakeLists.txt
NWChemExBase_Test/TestDebugBuildType/: CMakeLists.txt
NWChemExBase_Test/TestReleaseBuildType/: CMakeLists.txt
NWChemExBase_Test/TestSharedLibrary/: CMakeLists.txt
cmake/: CMSBTargetConfig.cmake.in  CMakeBuildConfig.cmake.in  DependencyMacros.cmake  NWChemExBaseConfig.cmake.in  NWChemExTargetConfig.cmake.in
cmake/build_external/: BuildASCI.cmake  BuildAntlrCppRuntime.cmake  BuildBLAS.cmake  BuildBLIS.cmake  BuildCBLAS.cmake  BuildCMakeBuild.cmake  BuildCXXBLACS.cmake  BuildDOCTEST.cmake  BuildELPA.cmake  BuildEcpInt.cmake  BuildEigen3.cmake  BuildGTest.cmake  BuildGauXC.cmake  BuildGlobalArrays.cmake  BuildHDF5.cmake  BuildHPTT.cmake  BuildLAPACK.cmake  BuildLAPACKE.cmake  BuildLibInt.cmake  BuildLibInt2.cmake  BuildLibrett.cmake  BuildMACIS.cmake  BuildMSGSL.cmake  BuildNJSON.cmake  BuildNWChemExBase.cmake  BuildNWX_Catch.cmake  BuildSPDLOG.cmake  BuildScaLAPACK.cmake  BuildTALSH.cmake  BuildTAMM.cmake  Buildbphash.cmake  Buildcereal.cmake  Buildmemkind.cmake  Buildnumactl.cmake  Buildpybind11.cmake  cmsb_linalg.cmake  dep_versions.cmake
cmake/build_external/BLIS/: CMakeLists.txt
cmake/build_external/ELPA/: CMakeLists.txt
cmake/build_external/GlobalArrays/: CMakeLists.txt  ga_linalg.h.in
cmake/build_external/LAPACKE/: CMakeLists.txt
cmake/build_external/LibInt/: CMakeLists.txt
cmake/build_external/NWX_Catch/: CMakeLists.txt
cmake/build_external/ScaLAPACK/: CMakeLists.txt
cmake/find_external/: FindAntlrCppRuntime.cmake  FindBLAS.cmake  FindBLIS.cmake  FindCBLAS.cmake  FindCXXBLACS.cmake  FindELPA.cmake  FindGlobalArrays.cmake  FindHDF5.cmake  FindHPTT.cmake  FindLAPACK.cmake  FindLAPACKE.cmake  FindLibInt.cmake  FindMSGSL.cmake  FindNWXCUDA.cmake  FindNWX_MPI.cmake  FindScaLAPACK.cmake  FindTALSH.cmake  Findnumactl.cmake  Findpybind11.cmake
cmake/find_external/find_linalg/linalg-modules/: FindLAPACK.cmake
cmake/find_external/linalg-modules/: CommonFunctions.cmake  FindIBMESSL.cmake  FindIntelMKL.cmake  FindIntelSYCL.cmake
cmake/macros/: BuildCMSBModule.cmake  BuildNWChemExModule.cmake  DebuggingMacros.cmake  DependencyMacros.cmake  OptionMacros.cmake  SetPaths.cmake  TargetMacros.cmake  UtilityMacros.cmake
cmake/patches/: antlr_cmakelists.patch
dox/: BuildBasics.md  BuildNWChemExModule.md  Building.md  CMakeBuildModel.md  DependencyMacros.md  ExtendingNWChemExBase.md  FindingDependencies.md  MacroDocumentation.md  QuickStart.md  SupportedDependencies.md  TargetMacros.md
scripts/: get_deps.sh
tools/lint/: .clang-format  README.md  clean_my_code.sh  run_clang_format.sh
tools/lint/clang-format-all/: .clang-format  clang-format-all
